--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.android.gms:play-services-location:9.2.0'
     compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
+
     testCompile 'junit:junit:4.12'
 }
 
