--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:configChanges="orientation|screenSize"
+
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         >
         <activity android:name=".MainActivity">
